kubernetes-networks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staticweb-deployment
  namespace: homework
  labels:
    app.kubernetes.io/name: staticweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: staticweb
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 2
  template:
    metadata:
      name: staticweb
      namespace: homework
      labels:
        app.kubernetes.io/name: staticweb
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - name: staticweb-port
          containerPort: 8000
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm -rf /homework/index.html"]
        volumeMounts:
        - name: nginx-main-conf
          mountPath: /etc/nginx
          readOnly: true
        - name: shared
          mountPath: /homework
        readinessProbe:
          httpGet:
            path: /index.html
            port: staticweb-port
            httpHeaders:
            - name: X-Readiness-Probe
              value: k8s-local
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /index.html
            port: staticweb-port
            httpHeaders:
            - name: K8SHealthChecker
              value: LivenessProbe
          initialDelaySeconds: 5
          periodSeconds: 3
      volumes:
      - name: nginx-main-conf
        configMap:
          name: nginx-config
          items:
            - key: "nginx.conf"
              path: "nginx.conf"
      - name: shared
        emptyDir:
          medium: ""
          sizeLimit: 1Mi
---
apiVersion: v1
kind: Service
metadata:
  name: staticweb
  namespace: homework
  labels:
    app.kubernetes.io/name: staticweb
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: staticweb
  ports:
  - name: static-web-svc-port
    protocol: TCP
    port: 8000
    targetPort: staticweb-port
    nodePort: 32000
